# vots

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  vcpkg-configuration.json
scripts/: build.sh  run_clients.sh  run_system.sh
src/: CMakeLists.txt  exchange_main.cpp  trading_main.cpp
src/include/common/: integrity.hpp  perf_utils.hpp  time_utils.hpp  types.hpp
src/include/integrity/: integrity.hpp
src/include/logging/: log_type.hpp  logger.hpp
src/include/market_data/: market_data_consumer.hpp  market_data_publisher.hpp  market_update.hpp  snapshot_synthesizer.hpp
src/include/matching_engine/: exchange_order.hpp  exchange_order_book.hpp  matching_engine.hpp  order.hpp  order_book.hpp
src/include/network/: mcast_socket.hpp  socket_utils.hpp  tcp_server.hpp  tcp_socket.hpp
src/include/order_gateway/: client_response.hpp  fifo_sequencer.hpp  gateway_client.hpp  order_server.hpp
src/include/order_server/: client_request.hpp  client_response.hpp  fifo_sequencer.hpp  order_server.hpp
src/include/program/: program.hpp
src/include/runtime/: lock_free_queue.hpp  memory_pool.hpp  threads.hpp
src/include/trading_engine/: feature_engine.hpp  liquidity_taker.hpp  market_maker.hpp  om_order.hpp  order_manager.hpp  position_keeper.hpp  risk_manager.hpp  trading_engine.hpp  trading_order.hpp  trading_order_book.hpp
src/market_data/: CMakeLists.txt  market_data_consumer.cpp  market_data_publisher.cpp  snapshot_synthesizer.cpp
src/matching_engine/: CMakeLists.txt  exchange_order_book.cpp  matching_engine.cpp  order_book.cpp
src/network/: CMakeLists.txt  mcast_socket.cpp  tcp_server.cpp  tcp_socket.cpp
src/order_gateway/: CMakeLists.txt  gateway_client.cpp  order_server.cpp
src/order_server/: CMakeLists.txt  order_server.cpp
src/temp/: CMakeLists.txt  main.cpp
src/trading_engine/: CMakeLists.txt  order_manager.cpp  trading_engine.cpp  trading_order_book.cpp
